Employee alignment issue

--- a/src/screens/payrollemp/style.scss
+++ b/src/screens/payrollemp/style.scss
@@ -11,4 +11,20 @@
       padding: 0.4em 0.6em;
       font-size: 90%;
     }
+    .react-tel-input .form-control {
+      position: relative;
+      font-size: 14px;
+      letter-spacing: 0.01rem;
+      margin-top: 3px !important;
+      margin-bottom: 3px !important;
+      padding-left: 41px;
+      margin-left: -1px;
+      background: #FFFFFF;
+      border: 1px solid #CACACA;
+      border-radius: 5px;
+      line-height: 1px;
+      height: 35px;
+      width: 160px;
+      outline: none;
   }
+}
